     * New syntax for 'ovs-ofctl packet-out' command, which uses the
       same string parser as the 'bundle' command.  The old 'packet-out'
       syntax is deprecated and will be removed in a later OVS
       release.
     * New unixctl "ofctl/packet-out" command, which can be used to
       instruct a flow monitor to issue OpenFlow packet-out messages.
   - Tunnels:
     * TLV mappings for protocols such as Geneve are now segregated on
       a per-OpenFlow bridge basis rather than globally. (The interface
       has not changed.)
     * Removed support for IPsec tunnels.
   - DPDK:
     * New option 'n_rxq_desc' and 'n_txq_desc' fields for DPDK interfaces
       which set the number of rx and tx descriptors to use for the given port.
   - Fedora packaging:
     * A package upgrade does not automatically restart OVS service.

v2.6.0 - 27 Sep 2016
---------------------
   - First supported release of OVN.  See ovn-architecture(7) for more
     details.
   - ovsdb-server:
     * New "monitor_cond" "monitor_cond_update" and "update2" extensions to
       RFC 7047.
   - OpenFlow:
     * OpenFlow 1.3+ bundles now expire after 10 seconds since the
       last time the bundle was either opened, modified, or closed.
     * OpenFlow 1.3 Extension 230, adding OpenFlow Bundles support, is
       now implemented.
     * OpenFlow 1.3+ bundles are now supported for group mods as well as
       flow mods and port mods.  Both 'atomic' and 'ordered' bundle
       flags are supported for group mods as well as flow mods.
     * Internal OpenFlow rule representation for load and set-field
       actions is now much more memory efficient.  For a complex flow
       table this can reduce rule memory consumption by 40%.
     * Bundles are now much more memory efficient than in OVS 2.5.
       Together with memory efficiency improvements in OpenFlow rule
       representation, the peak OVS resident memory use during a
       bundle commit for large complex set of flow mods can be only